# poly-arb-engine-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  poly-bot.service
src/: main.rs
src/app/: filled_order_checker.rs  initialization.rs  mod.rs  order_cleanup.rs  position_redemption.rs  trading_loop.rs
src/app/order_placement/: mod.rs  safety_checks.rs
src/app/order_placement/fishing_orders/: market_loop.rs  mod.rs  order_handlers.rs
src/app/order_placement/order_execution/: mod.rs  no_order.rs  yes_order.rs
src/app/startup/: banner.rs  mod.rs  safety.rs
src/clients/: mod.rs
src/clients/chain/: balance.rs  mod.rs  token_balance.rs
src/clients/poly_api/: auth.rs  cancel.rs  client.rs  market_fetcher.rs  market_parser.rs  markets.rs  mod.rs  order_builder.rs  order_response.rs  orderbook.rs  orderbook_parser.rs  orders.rs  types.rs
src/clients/poly_api/flaresolverr/: curl_fallback.rs  delete.rs  headers.rs  health.rs  mod.rs  post.rs  response_parser.rs
src/config/: settings.rs
src/engine/: fishing.rs  mod.rs  pending_orders.rs  positions.rs  risk.rs
src/engine/discovery/: best_expiry.rs  mod.rs  valid_markets.rs
src/execution/: mod.rs  trade.rs
src/execution/signer/: domain_separator.rs  mod.rs  order_hash.rs  signer.rs
src/main/: initialization.rs
src/telegram/: keyboard.rs  mod.rs
src/telegram/handlers/: callback_handlers.rs  constants.rs  message_handlers.rs  mod.rs
src/telegram/handlers/callbacks/: controls.rs  (+1 more)
src/types/: market.rs  mod.rs  orderbook.rs  pending_order.rs  position.rs  responses.rs
src/utils/: logger.rs
(+3 files in other folders)
