[package]
name = "poly-arb-engine"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }  # Async runtime
reqwest = { version = "0.11", features = ["json"] } # HTTP requests
serde = { version = "1.0", features = ["derive"] } # JSON parsing
serde_json = "1.0"
scraper = "0.17"
csv = "1"
dotenv = "0.15" # Loading .env
ethers = { version = "2.0", features = ["eip712"] } # Blockchain interaction with EIP-712 support
tokio-tungstenite = "0.20" # WebSockets (fast data)
futures-util = "0.3"
chrono = "0.4" # Time handling (for 15min expiry)
log = "0.4"
env_logger = "0.10"
anyhow = "1.0" # Error handling
teloxide = "0.12" # Telegram bot framework
hex = "0.4" # Hex encoding for signatures
sha2 = "0.10" # SHA-256 for HMAC
hmac = "0.12" # HMAC for request signing
base64 = "0.21" # Base64 encoding for signatures

